--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "./utils/vars";
 @import "./utils/body";
 @import "./utils/hidden";
+@import "./utils/flexbasis";
 
 @import "./components/main/modal";
 @import "./components/main/button";
