--- a/css/main.css
+++ b/css/main.css
@@ -20,12 +20,23 @@ a {
 }
 
 .section {
-  padding-bottom: 94px;
-  padding-top: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .container {
+  min-width: 320px;
   margin: 0 auto;
+  width: 100%;
   padding-right: 15px;
   padding-left: 15px;
 }
@@ -53,6 +64,11 @@ a {
   line-height: 1.16;
   text-align: center;
   margin: 0 auto 50px;
+}
+
+img {
+  display: block;
+  height: auto;
 }
 
 body {
@@ -372,21 +388,33 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 56px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 40px;
 }
 
-.button__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-right: 10px;
+@media screen and (min-width: 768px) {
+  .button__list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
-.button__item:nth-child(5n) {
-  margin: 0px;
+@media screen and (min-width: 1200px) {
+  .button__list {
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .button__item {
+    margin-bottom: 15px;
+  }
+}
+
+.button__item:not(:last-child) {
+  margin-right: 8px;
 }
 
 .button {
@@ -421,23 +449,49 @@ body {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
-.project__item {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
+@media screen and (max-width: 767px) {
+  .project__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
-.project__item:nth-child(3n) {
-  margin-right: 0px;
+@media screen and (min-width: 768px) {
+  .project__item {
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
 }
 
-.project__item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .project__item {
+    max-width: 354px;
+    -ms-flex-preferred-size: flex-basis;
+        flex-basis: flex-basis;
+    -ms-flex-preferred-size: calc(100% / 2 - 30px);
+        flex-basis: calc(100% / 2 - 30px);
+  }
+  .project__item:nth-child(2n) {
+    margin-right: 0px;
+  }
+  .project__item:nth-last-child(-n + 2) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project__item {
+    width: 370px;
+    -ms-flex-preferred-size: calc(100% / 3 - 30px);
+        flex-basis: calc(100% / 3 - 30px);
+  }
+  .project__item:nth-child(3n) {
+    margin-right: 0px;
+  }
+  .project__item:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 
 .project__item:hover .project__text_overlay {
@@ -452,7 +506,7 @@ body {
 .project__box {
   position: relative;
   overflow: hidden;
-  width: 370px;
+  width: 100%;
   height: 294px;
   top: 0;
   left: 0;
@@ -496,7 +550,7 @@ body {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: 0;
-  width: 370px;
+  width: 100%;
 }
 
 .project__title {
@@ -512,7 +566,7 @@ body {
   color: #757575;
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.88;
+  line-height: 1.87;
 }
 
 .header {
@@ -534,15 +588,20 @@ body {
 .logo {
   font-family: Raleway, sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  margin-right: 93px;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo:hover, .logo:focus {
   color: #2196f3;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
+    margin-right: 93px;
+  }
 }
 
 .logo__web {
@@ -662,15 +721,31 @@ body {
 }
 
 .hero__title {
+  font-weight: 900;
+  font-size: 22px;
+  line-height: 1.62;
+  width: 320px;
   margin: 0 auto;
   margin-bottom: 30px;
   color: #ffffff;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  width: 696px;
+}
+
+@media screen and (min-width: 480px) {
+  .hero__title {
+    font-size: 26px;
+    line-height: 1.62;
+    width: 360px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.36;
+    width: 696px;
+  }
 }
 
 .hero__button {
@@ -694,28 +769,86 @@ body {
   background-color: #188ce8;
 }
 
-.feutures__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 768px) {
+  .feutures__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .feutures__item {
-  width: 270px;
-  margin-right: 30px;
+  width: 100%;
 }
 
-.feutures__item:nth-child(4n) {
-  margin: 0px;
+@media screen and (max-width: 767px) {
+  .feutures__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .feutures__item {
+    margin-right: 30px;
+    margin-bottom: 30px;
+    -ms-flex-preferred-size: flex-basis;
+        flex-basis: flex-basis;
+    -ms-flex-preferred-size: calc(100% / 2 - 30px);
+        flex-basis: calc(100% / 2 - 30px);
+  }
+  .feutures__item:nth-child(2n) {
+    margin-right: 0px;
+  }
+  .feutures__item:nth-last-child(-n + 2) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .feutures__item {
+    -ms-flex-preferred-size: calc(100% / 4 - 30px);
+        flex-basis: calc(100% / 4 - 30px);
+    margin-right: 30px;
+  }
+  .feutures__item:nth-child(4n) {
+    margin-right: 0px;
+  }
 }
 
 .features__icon_package {
-  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 120px;
-  padding: 25px 100px;
   margin-bottom: 30px;
   background: #f5f4fa;
   border-radius: 4px;
+}
+
+@media screen and (max-width: 767px) {
+  .features__icon_package {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .features__icon_package {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features__icon_package {
+    width: 270px;
+  }
 }
 
 .features__icon {
@@ -731,15 +864,38 @@ body {
   text-transform: uppercase;
 }
 
+@media screen and (max-width: 767px) {
+  .features__title {
+    text-align: center;
+  }
+}
+
 .features__text {
   color: #757575;
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .features__text {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features__text {
+    width: 270px;
+  }
+}
+
 .occupation {
   padding-top: 0;
+}
+
+@media screen and (max-width: 1199px) {
+  .occupation {
+    display: none;
+  }
 }
 
 .occupation__image_package {
@@ -782,33 +938,60 @@ body {
   display: flex;
 }
 
-.team__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .team__item {
-  width: 270px;
-  margin-right: 30px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team__item:nth-child(4n) {
-  margin: 0px;
+@media screen and (max-width: 767px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
-.team__item:nth-last-child(-n + 4) {
-  margin-bottom: 0px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team__item {
+    margin-right: 30px;
+    margin-bottom: 30px;
+    -ms-flex-preferred-size: flex-basis;
+        flex-basis: flex-basis;
+    -ms-flex-preferred-size: calc(100% / 2 - 30px);
+        flex-basis: calc(100% / 2 - 30px);
+  }
+  .team__item:nth-child(2n) {
+    margin-right: 0px;
+  }
+  .team__item:nth-last-child(-n + 2) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__item {
+    -ms-flex-preferred-size: calc(100% / 4 - 30px);
+        flex-basis: calc(100% / 4 - 30px);
+    margin-right: 30px;
+  }
+  .team__item:nth-child(4n) {
+    margin: 0px;
+  }
 }
 
 /* Team */
 .team__face {
   display: block;
-  max-width: 100%;
 }
 
 .team__members {
@@ -889,17 +1072,58 @@ body {
 }
 
 .customer__list {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .customer__item {
   margin-right: 30px;
+  width: 170px;
 }
 
-.customer__item:nth-child(6n) {
-  margin: 0px;
+@media screen and (max-width: 767px) {
+  .customer__item {
+    width: 170px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    -ms-flex-preferred-size: flex-basis;
+        flex-basis: flex-basis;
+    -ms-flex-preferred-size: calc(100% / 2 - 30px);
+        flex-basis: calc(100% / 2 - 30px);
+  }
+  .customer__item:nth-child(2n) {
+    margin-right: 0px;
+  }
+  .customer__item:nth-last-child(-n + 2) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .customer__item {
+    width: 226px;
+    margin-bottom: 30px;
+    -ms-flex-preferred-size: calc(100% / 3 - 30px);
+        flex-basis: calc(100% / 3 - 30px);
+  }
+  .customer__item:nth-child(3n) {
+    margin-right: 0px;
+  }
+  .customer__item:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .customer__item {
+    width: 170px;
+  }
+  .customer__item:nth-child(6n) {
+    margin: 0px;
+  }
 }
 
 .customer__link {
@@ -940,29 +1164,81 @@ body {
   fill: #2196f3;
 }
 
+@media screen and (max-width: 767px) {
+  .footer__box {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__box {
+    margin-bottom: 60px;
+  }
+}
+
 .footer__container {
-  max-width: 1600px;
-  height: 252px;
-  margin-left: auto;
-  margin-right: auto;
   background: #2f303a;
   padding-bottom: 60px;
   padding-top: 60px;
 }
 
-.footer__container_box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    max-width: 1600px;
+    height: 252px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__container_box {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__container_box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__container_box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__container_box {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
 
 .logo__footer--accent {
   display: block;
   margin-bottom: 20px;
   color: #ffffff;
+  font-size: 24px;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo__footer--accent {
+    font-size: 26px;
+  }
 }
 
 .address__link {
@@ -975,7 +1251,6 @@ body {
 
 .address {
   display: block;
-  width: 231px;
 }
 
 .address__link--accent {
@@ -994,11 +1269,13 @@ body {
   margin-bottom: 0px;
 }
 
-.social__container {
-  display: block;
-  margin-left: 70px;
-  width: 206px;
-  height: 80px;
+@media screen and (min-width: 1200px) {
+  .social__container {
+    display: block;
+    margin-left: 70px;
+    width: 206px;
+    height: 80px;
+  }
 }
 
 .social__container_text {
@@ -1014,6 +1291,12 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .social-footer__item {
@@ -1055,14 +1338,18 @@ body {
   height: 20px;
 }
 
-.subscription {
-  margin-left: 93px;
+@media screen and (min-width: 1200px) {
+  .subscription {
+    margin-left: 93px;
+  }
 }
 
-.subscription__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .subscription__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .subscription__text {
@@ -1089,6 +1376,19 @@ body {
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   outline: none;
+}
+
+@media screen and (max-width: 1199px) {
+  .subscription__input {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription__input {
+    min-width: 358px;
+  }
 }
 
 .subscription__input[type="email"]:focus {
@@ -1146,6 +1446,13 @@ body {
   border-radius: 4px;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 1199px) {
+  .subscription__button {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .subscription__button:hover, .subscription__button:focus {
