--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -20,13 +20,21 @@ a {
 }
 
 .section {
-  padding-bottom: 94px;
-  padding-top: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .container {
-  // min-width: 320px;
+  min-width: 320px;
   margin: 0 auto;
   // width: 1200px;
+  width: 100%;
   padding-right: 15px;
   padding-left: 15px;
 
@@ -47,4 +55,10 @@ a {
   line-height: 1.16;
   text-align: center;
   margin: 0 auto 50px;
+}
+
+img {
+  display: block;
+  // max-width: 100%;
+  height: auto;
 }
