--- a/sass/components/main/_button.scss
+++ b/sass/components/main/_button.scss
@@ -1,16 +1,58 @@
 .button__list {
   display: flex;
-  justify-content: center;
-  margin-bottom: 56px;
-}
-.button__item {
-  display: flex;
-  margin-right: 10px;
+  // justify-content: center;
+  // margin-bottom: 56px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
 
-  &:nth-child(5n) {
-    margin: 0px;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
   }
 }
+.button__item {
+  // display: flex;
+  // margin-right: 10px;
+
+  // &:nth-child(5n) {
+  //   margin: 0px;
+  // }
+
+  @media screen and (max-width: 767px) {
+    margin-bottom: 15px;
+  }
+  &:not(:last-child) {
+    margin-right: 8px;
+  }
+}
+
+// .button-list{
+//   display: flex;
+//   flex-wrap: wrap;
+
+//   @media screen and (min-width: 768px){
+//       justify-content: center;
+//   }
+// }
+
+// .portfolio__button-list{
+//   margin-bottom: 40px;
+
+//   @media screen and (min-width: 1200px){
+//       margin-bottom: 50px;
+//   }
+// }
+
+// .button-list__item{
+//   @media screen and (max-width: 767px){
+//       margin-bottom: 15px;
+//   }
+//   &:not(:last-child){
+//       margin-right: 8px;
+//   }
+// }
 
 .button {
   font-family: Roboto;
