--- a/sass/components/main/_portfolio.scss
+++ b/sass/components/main/_portfolio.scss
@@ -1,19 +1,54 @@
 .project__list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+
+  // margin-bottom: -30px;
+  @media screen and (min-width: 768px) {
+    // display: flex;
+    // flex-wrap: wrap;
+    // margin-right: -30px;
+  }
 }
 
 .project__item {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  &:nth-child(3n) {
-    margin-right: 0px;
+  // max-width: 100%;
+  // display: block;
+  // width: 370px;
+
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0px;
+
+  @media screen and (min-width: 768px) {
+    margin-right: 30px;
+    margin-bottom: 30px;
   }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    max-width: 354px;
+    @include flex-basis__2;
+    // flex-basis: calc(100% / 2 - 30px);
+    // &:nth-child(2n) {
+    //   margin-right: 0px;
+    // }
+    // &:nth-last-child(-n + 2) {
+    //   margin-bottom: 0px;
+    // }
+  }
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+    @include flex-basis__3;
+    // flex-basis: calc(100% / 3 - 30px);
+    // &:nth-child(3n) {
+    //   margin-right: 0px;
+    // }
+    // &:nth-last-child(-n + 3) {
+    //   margin-bottom: 0px;
+    // }
+  }
+
   &:hover {
     .project__text_overlay {
       transform: translateY(0);
@@ -27,7 +62,8 @@
 .project__box {
   position: relative;
   overflow: hidden;
-  width: 370px;
+  width: 100%;
+  // width: 370px;
   height: 294px;
   top: 0;
   left: 0;
@@ -66,7 +102,7 @@
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: 0;
-  width: 370px;
+  width: 100%;
 }
 .project__title {
   margin-bottom: 4px;
@@ -82,5 +118,5 @@
   color: $secondary-color;
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.88;
+  line-height: 1.87;
 }
