--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -1,10 +1,48 @@
 .customer__list {
-  display: inline-flex;
+  // display: inline-flex;
+
+  display: flex;
+  flex-wrap: wrap;
 }
 .customer__item {
   margin-right: 30px;
-  &:nth-child(6n) {
-    margin: 0px;
+  // &:nth-child(6n) {
+  // margin: 0px;
+  // }
+  width: 170px;
+  @media screen and (max-width: 767px) {
+    width: 170px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    // max-width: 354px;
+    @include flex-basis__2;
+
+    // flex-basis: calc(100% / 2 - 30px);
+    // &:nth-child(2n) {
+    //   margin-right: 0px;
+    // }
+    // &:nth-last-child(-n + 2) {
+    //   margin-bottom: 0px;
+    // }
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 226px;
+    margin-bottom: 30px;
+    @include flex-basis__3;
+    // flex-basis: calc(100% / 3 - 30px);
+    // &:nth-child(3n) {
+    //   margin-right: 0px;
+    // }
+    // &:nth-last-child(-n + 3) {
+    //   margin-bottom: 0px;
+    // }
+  }
+  @media screen and (min-width: 1200px) {
+    width: 170px;
+    &:nth-child(6n) {
+      margin: 0px;
+    }
   }
 }
 
