--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,22 +1,59 @@
 .feutures__list {
-  display: flex;
+  @media screen and(min-width:768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
-
 .feutures__item {
-  width: 270px;
-  margin-right: 30px;
-  &:nth-child(4n) {
-    margin: 0px;
+  width: 100%;
+  // margin-bottom: 30px;
+  @media screen and(max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 768px) and(max-width: 1199px) {
+    margin-right: 30px;
+    margin-bottom: 30px;
+    @include flex-basis__2;
+
+    // flex-basis: calc(100% / 2 - 30px);
+    // &:nth-child(2n) {
+    //   margin-right: 0px;
+    // }
+    // &:nth-last-child(-n + 2) {
+    //   margin-bottom: 0px;
+    // }
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 4 - 30px);
+    margin-right: 30px;
+    &:nth-child(4n) {
+      margin-right: 0px;
+    }
   }
 }
 
 .features__icon_package {
-  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   height: 120px;
-  padding: 25px 100px;
   margin-bottom: 30px;
   background: $secondary-background-color;
   border-radius: 4px;
+
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 354px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
 }
 .features__icon {
   width: 70px;
@@ -30,11 +67,21 @@
   line-height: 1.14;
 
   text-transform: uppercase;
+
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 .features__text {
   color: $secondary-color;
 
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
+
+  @media screen and(min-width:768px) and (max-width: 1199px) {
+    width: 354px;
+  }
+  @media screen and(min-width:1200px) {
+    width: 270px;
+  }
 }
