--- a/sass/layout/_occupation.scss
+++ b/sass/layout/_occupation.scss
@@ -1,5 +1,8 @@
 .occupation {
   padding-top: 0;
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
 }
 .occupation__image_package {
   position: absolute;
