--- a/sass/layout/footer/_footer-input.scss
+++ b/sass/layout/footer/_footer-input.scss
@@ -1,9 +1,15 @@
 .subscription {
-  margin-left: 93px;
+  // margin-left: 93px;
+
+  @media screen and(min-width:1200px) {
+    margin-left: 93px;
+  }
 }
 
 .subscription__form {
-  display: flex;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
 
 .subscription__text {
@@ -32,6 +38,14 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   outline: none;
+  @media screen and (max-width: 1199px) {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  @media screen and (min-width: 1200px) {
+    min-width: 358px;
+  }
+
   &[type="email"]:focus {
     border: 1px solid $accent-color;
   }
@@ -67,6 +81,11 @@
   border-radius: 4px;
   transition: color 250ms $timing-function,
     background-color 250ms $timing-function;
+  @media screen and(max-width:1199px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   &:hover,
   &:focus {
     background-color: $button-hover;
