--- a/sass/layout/footer/_footer-logo.scss
+++ b/sass/layout/footer/_footer-logo.scss
@@ -2,4 +2,8 @@
   display: block;
   margin-bottom: 20px;
   color: $primary-white-color;
+  font-size: 24px;
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+  }
 }
