--- a/sass/layout/footer/_footer.scss
+++ b/sass/layout/footer/_footer.scss
@@ -1,14 +1,41 @@
+.footer__box {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-bottom: 60px;
+  }
+}
 .footer__container {
-  max-width: 1600px;
-  height: 252px;
-  margin-left: auto;
-  margin-right: auto;
   background: $br-fone;
   padding-bottom: 60px;
   padding-top: 60px;
+
+  @media screen and (min-width: 1200px) {
+    max-width: 1600px;
+    height: 252px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .footer__container_box {
-  display: flex;
-  align-items: baseline;
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: baseline;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  @media screen and (min-width: 1200px) {
+    justify-content: space-between;
+  }
 }
