--- a/sass/layout/footer/_social.scss
+++ b/sass/layout/footer/_social.scss
@@ -1,8 +1,10 @@
 .social__container {
-  display: block;
-  margin-left: 70px;
-  width: 206px;
-  height: 80px;
+  @media screen and (min-width: 1200px) {
+    display: block;
+    margin-left: 70px;
+    width: 206px;
+    height: 80px;
+  }
 }
 
 .social__container_text {
@@ -14,8 +16,11 @@
 
   margin-bottom: 20px;
 }
+
 .social-footer__list {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .social-footer__item {
   margin-right: 10px;
@@ -48,23 +53,3 @@
   width: 20px;
   height: 20px;
 }
-
-// .social__list {
-//   justify-content: center;
-// }
-// .social__item {
-//   display: flex;
-// }
-
-// .social__link {
-
-//   fill: $color-icon;
-//   background-color: $primary-white-color;
-
-//   &:hover,
-//   &:focus {
-//     fill: $primary-white-color;
-//     background-color: $accent-color;
-//   }
-// }
-//
