--- a/sass/layout/header/_logo-header.scss
+++ b/sass/layout/header/_logo-header.scss
@@ -1,13 +1,22 @@
 .logo {
   font-family: Raleway, sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  margin-right: 93px;
+  // font-size: 26px;
+  // line-height: 1.19;
+  // margin-right: 93px;
   transition: color 250ms $timing-function;
   &:hover,
   &:focus {
     color: $accent-color;
+  }
+
+  @media screen and (min-width: 768px) {
+    // margin-right: 88px;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.19;
+    margin-right: 93px;
   }
 }
 .logo__web {
