--- a/sass/layout/footer/_footer-logo.scss
+++ b/sass/layout/footer/_footer-logo.scss
@@ -3,6 +3,9 @@
   margin-bottom: 20px;
   color: $primary-white-color;
   font-size: 24px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin: 0;
+  }
   @media screen and (min-width: 1200px) {
     font-size: 26px;
   }
