--- a/sass/layout/mobile-menu/_menu-contacts.scss
+++ b/sass/layout/mobile-menu/_menu-contacts.scss
@@ -3,6 +3,9 @@
     display: flex;
     flex-direction: column-reverse;
   }
+  @media screen and (max-width: 767px) {
+    margin-bottom: 64px;
+  }
   @media screen and (min-width: 768px) {
     margin-left: auto;
     display: flex;
@@ -39,8 +42,6 @@
   }
   @media screen and (min-width: 1200px) {
     line-height: 1.14;
-  }
-  @media screen and (min-width: 1200px) {
     padding-top: 32px;
     padding-bottom: 32px;
   }
@@ -60,7 +61,49 @@
   }
 }
 
-.menu__link_contacts:hover .menu__icon_contacts,
-.menu__link_contacts:focus .menu__icon_contacts {
-  fill: $accent-color;
+.menu__link_contacts {
+  &:hover,
+  &:focus {
+    .menu__icon_contacts {
+      fill: $accent-color;
+    }
+  }
+}
+.menu__link_tel {
+  transition: color 250ms $timing-function;
+  @media screen and (max-width: 767px) {
+    color: $accent-color;
+    font-size: 34px;
+    line-height: 1.17;
+  }
+  @media screen and (min-width: 768px) {
+    color: $secondary-color;
+    font-size: 12px;
+    line-height: 1.16;
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
+  }
+}
+
+.menu__link_mail {
+  transition: color 250ms $timing-function;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  color: $secondary-color;
+  @media screen and (min-width: 768px) {
+    font-size: 12px;
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-bottom: 10px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+  }
 }
